<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/_25dp"
    android:background="@drawable/pop_up_bg"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/_16dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/are_you_sure_want_to_delete_this_todo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_14dp"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            app:cornerRadius="@dimen/_16dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textAppearance="@style/radio"
            app:backgroundTint="@color/pale_blue"
            android:text="@string/no"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_weight="1"
            app:cornerRadius="@dimen/_16dp"
            android:textColor="@color/black"
            android:text="@string/yes"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/pale_blue"
            app:strokeWidth="1dp"
           />

    </LinearLayout>

</LinearLayout>